Fix mission cards spacing on small screens

--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ body{
                 text-align: center; 
             }
             .card-circle { 
-                 width: 100%;
+                 width: 80%;
                  max-width: 400px; 
             }
             .mission-container {
